--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
         <!-- Add your JS here -->
 
     </body>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </html>
